fix multi refresh bug, right align usernames, initial code for hilighting tab with new messages

--- a/Blaze/Content/Blaze.css
+++ b/Blaze/Content/Blaze.css
@@ -117,3 +117,14 @@
 {
     width: 55px;
 }
+.emoji
+{
+    width: 24px;
+    height: 24px;
+}
+.message .left {
+    text-align: right;    
+}
+.message .left .name {
+    padding-right: 20px;
+}
